# funrobo_kinematics

./: HW2.md  README.md  pyproject.toml
examples/: hiwonder.py  traj_gen.py
funrobo_kinematics/core/: arm_models.py  trajectory_generator.py  visualizer.py
scripts/: hiwonder.py  hiwonder_ik.py  hiwonder_model.py  hiwonder_rrmc.py  kinova.py  kinova_model.py  scara.py  scara_model.py  two_dof.py
tests/: test_hiwonder.py  test_kinova.py  test_two_dof.py
