[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funrobo_kinematics"
version = "0.1.0"
description = "Fun robotics kinematics utilities for teaching"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "pygame",
  "pyyaml",
  "ipython",
  "pynput>=1.8.1",
  "pytest>=9.0.2",
  "opencv-python>=4.13.0.92",
]

[tool.setuptools]
packages = ["funrobo_kinematics"]
